--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,29 @@
         <relativePath/>
     </parent>
 
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>com.ksptool</groupId>
+                <artifactId>assembly</artifactId>
+                <version>2.2H</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
     <dependencies>
+
+        <dependency>
+            <groupId>com.ksptool</groupId>
+            <artifactId>assembly-entity</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.ksptool</groupId>
+            <artifactId>assembly-mapper</artifactId>
+        </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.mybatis.spring.boot/mybatis-spring-boot-starter -->
         <dependency>
@@ -118,12 +140,6 @@
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>com.ksptool</groupId>
-            <artifactId>EntityMapper</artifactId>
-            <version>2.1R</version>
-        </dependency>
-
         <!-- https://mvnrepository.com/artifact/com.h2database/h2 -->
         <dependency>
             <groupId>com.h2database</groupId>
@@ -162,6 +178,7 @@
             <artifactId>knife4j-openapi3-jakarta-spring-boot-starter</artifactId>
             <version>4.5.0</version>
         </dependency>
+
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
