feat: 1.3G SpringBoot在开发环境将Vite所需的几个目录反向代理回Vite 而不是自己读文件

--- a/pom.xml
+++ b/pom.xml
@@ -306,6 +306,7 @@
                     <include>**/**.woff2</include>
                     <include>**/**.jpeg</include>
                     <include>**/**.sql</include>
+                    <include>**/**.worker.ts</include>
                 </includes>
                 <excludes>
                     <exclude>views/webconsole/node_modules/**</exclude>
