--- a/src/main/resources/views/webconsole/package.json
+++ b/src/main/resources/views/webconsole/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.8.4",
     "bootstrap-icons": "^1.11.3",
     "element-plus": "^2.9.7",
+    "hash-wasm": "^4.12.0",
     "json-editor-vue": "^0.18.1",
     "marked": "^15.0.7",
     "monaco-editor-vue3": "^0.1.10",
