--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.3.5</version>
+        <version>3.5.9</version>
         <relativePath/>
     </parent>
 
@@ -39,6 +39,12 @@
         <dependency>
             <groupId>com.ksptool</groupId>
             <artifactId>assembly-entity</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-commons</artifactId>
+            <version>3.5.7</version>
         </dependency>
 
         <dependency>
@@ -70,12 +76,6 @@
             <artifactId>spring-boot-configuration-processor</artifactId>
         </dependency>
 
-        <!-- Lombok，用于减少样板代码 -->
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-        </dependency>
-
         <!-- Spring Boot DevTools，用于开发时热部署 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -103,11 +103,11 @@
             <version>2.11.0</version>
         </dependency>
 
-        <!-- Commons Lang，用于提供 Java 类的常用函数 -->
+        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-            <version>3.17.0</version>
+            <version>3.20.0</version>
         </dependency>
 
         <!-- Spring Boot Actuator Starter，用于监控和管理应用程序 -->
@@ -157,7 +157,7 @@
         <dependency>
             <groupId>io.swagger.parser.v3</groupId>
             <artifactId>swagger-parser</artifactId>
-            <version>2.1.31</version>
+            <version>2.1.37</version>
             <exclusions>
                 <exclusion>
                     <groupId>io.swagger.core.v3</groupId>
