--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -45,6 +45,7 @@ spring:
     properties:
       hibernate:
         format_sql: false
+        #use_sql_comments: true
 
   thymeleaf:
     cache: false # 开发环境禁用模板缓存
