fix: 1.4A CP2 关闭TS严格NULL校验

--- a/src/main/resources/views/webconsole/tsconfig.json
+++ b/src/main/resources/views/webconsole/tsconfig.json
@@ -10,6 +10,8 @@
     "types": ["unplugin-icons/types/vue"],
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+    "strict": false,
+    "strictNullChecks": false
   }
 }
