feat:1.4L CP14 云盘-下载时对于没有扩展名的云盘条目将会使用真实的文件扩展名进行下载

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,15 +17,15 @@ spring:
       enabled: true
 
   datasource:
-    #driver-class-name: com.mysql.cj.jdbc.Driver
-    #url: jdbc:mysql://192.168.10.202:3306/endpoint_analysis_service_test?serverTimezone=Asia/Shanghai&allowMultiQueries=true&useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
-    #username: root
-    #password: root
-
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/endpoint_analysis_service?serverTimezone=Asia/Shanghai&allowMultiQueries=true&useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://192.168.10.202:3306/endpoint_analysis_service_test?serverTimezone=Asia/Shanghai&allowMultiQueries=true&useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
     username: root
     password: root
+
+    #driver-class-name: com.mysql.cj.jdbc.Driver
+    #url: jdbc:mysql://127.0.0.1:3306/endpoint_analysis_service?serverTimezone=Asia/Shanghai&allowMultiQueries=true&useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
+    #username: root
+    #password: root
 
     #driver-class-name: org.h2.Driver
     #url: jdbc:h2:tcp://127.0.0.1:59000/./EndpointAnalysisService
@@ -39,7 +39,8 @@ spring:
   jpa:
     show-sql: false
     hibernate:
-      ddl-auto: update
+      #ddl-auto: update
+      ddl-auto: validate
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
     properties:
@@ -73,7 +74,7 @@ knife4j:
   enable: true
 
 application:
-  version: 1.3Z # 应用版本号
+  version: 1.4LCP11 # 应用版本号
 
 #附件模块配置
 module-attach:
@@ -82,7 +83,7 @@ module-attach:
 
   #本地文件存储配置
   local:
-    linux: /Docker/DockerData/
+    linux: /eas
     windows: C:\EAS
     auto-create: true
 
