feat:1.4S CP3 集成splitpanes库

--- a/src/main/resources/views/webconsole/package.json
+++ b/src/main/resources/views/webconsole/package.json
@@ -25,6 +25,7 @@
     "monaco-editor-vue3": "^0.1.10",
     "pinia": "^3.0.1",
     "pnpm": "^10.14.0",
+    "splitpanes": "^4.0.4",
     "vanilla-jsoneditor": "^3.8.0",
     "vue": "^3.5.13",
     "vue-demi": "^0.14.10",
