--- a/pom.xml
+++ b/pom.xml
@@ -194,6 +194,27 @@
         </dependency>
 
 
+        <!--Excel处理-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>easyexcel</artifactId>
+            <version>4.0.3</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>easyexcel-core</artifactId>
+            <version>4.0.3</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>easyexcel-support</artifactId>
+            <version>4.0.3</version>
+        </dependency>
+        <!--Excel处理 结束-->
+
+
     </dependencies>
 
     <build>
