--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,14 @@
 
     <dependencies>
 
+        <!-- Source: https://mvnrepository.com/artifact/com.belerweb/pinyin4j -->
+        <dependency>
+            <groupId>com.belerweb</groupId>
+            <artifactId>pinyin4j</artifactId>
+            <version>2.5.1</version>
+            <scope>compile</scope>
+        </dependency>
+
         <dependency>
             <groupId>com.ksptool</groupId>
             <artifactId>assembly-entity</artifactId>
@@ -53,11 +61,11 @@
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.mybatis.spring.boot/mybatis-spring-boot-starter -->
-<!--        <dependency>
-            <groupId>org.mybatis.spring.boot</groupId>
-            <artifactId>mybatis-spring-boot-starter</artifactId>
-            <version>3.0.5</version>
-        </dependency>-->
+        <!--        <dependency>
+                    <groupId>org.mybatis.spring.boot</groupId>
+                    <artifactId>mybatis-spring-boot-starter</artifactId>
+                    <version>3.0.5</version>
+                </dependency>-->
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
